autoconf, second try Signed-off-by: Benjamin Reh <ich@benjaminreh.de>

--- a/Makefile.am
+++ b/Makefile.am
@@ -7,8 +7,8 @@ LIBS=$(DEPS_LIBS)
 INCLUDES = $(DEPS_CFLAGS)
 CXXFLAGS = $(DEPS_CFLAGS)
 
-mainhub_CXXFLAGS = $(DEPS_CFLAGS)
-mainhub_LDADD = $(DEPS_LIBS)
+pdfbeamer_CXXFLAGS = $(DEPS_CFLAGS)
+pdfbeamer_LDADD = $(DEPS_LIBS)
 
 AUTOMAKE_OPTIONS = foreign
 
