autoconf seem to work
Signed-off-by: Benjamin Reh <ich@benjaminreh.de>

--- a/configure.ac
+++ b/configure.ac
@@ -5,7 +5,6 @@
 AC_PREREQ([2.0])
 AC_INIT(pdfbeamer, 0.2, ich@benjaminreh.de)
 AM_INIT_AUTOMAKE(@PACKAGE_NAME@, @PACKAGE_VERSION@)
-#~ AC_CONFIG_SRCDIR([interfaces/serial/connections.cpp])
 AC_CONFIG_HEADERS([config.h])
 
 # Checks for programs.
@@ -13,7 +12,34 @@ AC_PROG_CXX
 AC_PROG_CC
 
 # Checks for libraries.
-PKG_CHECK_MODULES(DEPS, [gtkmm-2.4 >= 2.8])
+AM_OPTIONS_WXCONFIG
+reqwx=2.4.0
+AM_PATH_WXCONFIG($reqwx, wxWin=1)
+if test "$wxWin" != 1; then
+	AC_MSG_ERROR([
+		wxWidgets must be installed on your system.
+ 
+		Please check that wx-config is in path, the directory
+		where wxWidgets libraries are installed (returned by
+		'wx-config --libs' or 'wx-config --static --libs' command)
+		is in LD_LIBRARY_PATH or equivalent variable and
+		wxWidgets version is $reqwx or above.
+		])
+fi
+ #~ 
+CPPFLAGS="$CPPFLAGS $WX_CPPFLAGS"
+CXXFLAGS="$CXXFLAGS $WX_CXXFLAGS_ONLY"
+CFLAGS="$CFLAGS $WX_CFLAGS_ONLY"
+LIBS="$LIBS $WX_LIBS"
+
+PKG_CHECK_MODULES([POPPLER], [poppler])
+PKG_CHECK_MODULES([POPPLER_SPLASH], [poppler-splash])
+
+CPPFLAGS="$CPPFLAGS $POPPLER_CPPFLAGS $POPPLER_CFLAGS"
+CXXFLAGS="$CXXFLAGS $POPPLER_CXXFLAGS"
+CFLAGS="$CFLAGS $POPPLER_CFLAGS"
+LIBS="$LIBS $POPPLER_LIBS"
+
 #~ AC_CHECK_LIB(boost_program_options-gcc-mt, main, DEPS_LIBS+=" -lboost_program_options-gcc-mt", [
 	#~ AC_CHECK_LIB(boost_program_options-mt, main, DEPS_LIBS+=" -lboost_program_options-mt", [
 		#~ AC_CHECK_LIB(boost_program_options, main, DEPS_LIBS+=" -lboost_program_options", [
@@ -28,8 +54,9 @@ PKG_CHECK_MODULES(DEPS, [gtkmm-2.4 >= 2.8])
 			#~ ])
 	#~ ])
 #~ ])
-#~ AC_SUBST(DEPS_CFLAGS)
-#~ AC_SUBST(DEPS_LIBS)
+AC_SUBST(DEPS_CFLAGS)
+AC_SUBST(DEPS_LIBS)
+
 # Checks for header files.
 AC_CHECK_HEADERS([fcntl.h string.h strings.h termios.h])
 
@@ -40,8 +67,8 @@ AC_SUBST(LIBTOOL_DEPS)
 AC_HEADER_STDBOOL
 
 # Checks for library functions.
-AC_FUNC_FORK
-AC_CHECK_FUNCS([bzero dup2 select])
+#~ AC_FUNC_FORK
+#~ AC_CHECK_FUNCS([bzero dup2 select])
 
 AC_CONFIG_FILES([Makefile
 				])
