--- a/Makefile.am
+++ b/Makefile.am
@@ -1,3 +1,6 @@
 ##Process this file with automake to create Makefile.in
 bin_PROGRAMS = pdfbeamer
 pdfbeamer_SOURCES = beamer.cpp  main.cpp  mainwindow.cpp  panel.cpp  pdf.cpp  pdfpage.cpp  pdf_panel.cpp
+
+
+AUTOMAKE_OPTIONS = foreign
